--- a/environment.yml
+++ b/environment.yml
@@ -214,4 +214,4 @@ dependencies:
     - wcwidth==0.2.5
     - webencodings==0.5.1
     - zipp==3.8.1
-prefix: /home/roger/anaconda3/envs/wavedefense
+prefix: wavedefense
